--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
     "express-jsdoc-swagger": "^1.6.8",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
     "eslint": "^8.17.0",
     "jest": "^28.1.1"
+  },
+  "jest": {
+    "collectCoverage":true,
+    "detectOpenHandles": true
   }
 }
